Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp
@@ -191,7 +191,7 @@ static inline PeerConnectionFactoryAndThreads& staticFactoryAndThreads()
     return factoryAndThreads.get();
 }
 
-static inline PeerConnectionFactoryAndThreads& getStaticFactoryAndThreads(bool useNetworkThreadWithSocketServer)
+PeerConnectionFactoryAndThreads& LibWebRTCProvider::getStaticFactoryAndThreads(bool useNetworkThreadWithSocketServer)
 {
     auto& factoryAndThreads = staticFactoryAndThreads();
 
@@ -200,6 +200,7 @@ static inline PeerConnectionFactoryAndThreads& getStaticFactoryAndThreads(bool u
     if (!factoryAndThreads.networkThread) {
         factoryAndThreads.networkThreadWithSocketServer = useNetworkThreadWithSocketServer;
         initializePeerConnectionFactoryAndThreads(factoryAndThreads);
+        startedNetworkThread();
     }
     return factoryAndThreads;
 }
